--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -2,5 +2,5 @@
 !com.vrchat.core.*
 
 # Change this to match your new package name
-!com.mmmaellon.juice
+!com.mmmaellon.real-fake-doors
 !com.vrchat.core.*/
