--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -14,6 +14,9 @@
     },
     "com.vrchat.clientsim": {
       "version": "1.2.6"
+    },
+    "com.mmmaellon.smartobjectsync": {
+      "version": "3.3.10"
     }
   },
   "locked": {
@@ -47,6 +50,12 @@
       "version": "1.2.6",
       "dependencies": {
         "com.vrchat.worlds": "^3.1.x"
+      }
+    },
+    "com.mmmaellon.smartobjectsync": {
+      "version": "3.3.10",
+      "dependencies": {
+        "com.vrchat.udonsharp": "1.1.X"
       }
     }
   }
