--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -27,7 +27,7 @@
       }
     },
     "com.vrchat.base": {
-      "version": "3.2.2",
+      "version": "3.3.0-beta.1",
       "dependencies": {}
     },
     "com.vrchat.core.vpm-resolver": {
@@ -35,9 +35,9 @@
       "dependencies": {}
     },
     "com.vrchat.worlds": {
-      "version": "3.2.2",
+      "version": "3.3.0-beta.1",
       "dependencies": {
-        "com.vrchat.base": "3.2.2"
+        "com.vrchat.base": "3.3.0-beta.1"
       }
     },
     "com.vrchat.udonsharp": {
@@ -47,13 +47,13 @@
       }
     },
     "com.vrchat.clientsim": {
-      "version": "1.2.6",
+      "version": "1.2.7",
       "dependencies": {
-        "com.vrchat.worlds": "^3.1.x"
+        "com.vrchat.worlds": "^3.2.2"
       }
     },
     "com.mmmaellon.smartobjectsync": {
-      "version": "3.4.1",
+      "version": "3.6.1",
       "dependencies": {
         "com.vrchat.udonsharp": "1.1.X"
       }
