prevent sleep on hitting limit which was causing issues

--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -27,7 +27,7 @@
       }
     },
     "com.vrchat.base": {
-      "version": "3.3.0-beta.1",
+      "version": "3.3.0",
       "dependencies": {}
     },
     "com.vrchat.core.vpm-resolver": {
@@ -35,9 +35,9 @@
       "dependencies": {}
     },
     "com.vrchat.worlds": {
-      "version": "3.3.0-beta.1",
+      "version": "3.3.0",
       "dependencies": {
-        "com.vrchat.base": "3.3.0-beta.1"
+        "com.vrchat.base": "3.3.0"
       }
     },
     "com.vrchat.udonsharp": {
@@ -53,7 +53,7 @@
       }
     },
     "com.mmmaellon.smartobjectsync": {
-      "version": "3.6.1",
+      "version": "3.6.4",
       "dependencies": {
         "com.vrchat.udonsharp": "1.1.X"
       }
